test/files/neg/t8143a.check
t8143a.scala:2: error: weaker access privileges in overriding
def f: Int (defined in class Foo)
  override should not be private
class Bar extends Foo { private def f = 10 }
                                    ^
one error found
